--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "axios": "^0.27.0",
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.20",
     "react-scripts": "^5.0.1",
     "typescript": "^4.6.2",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
